# finviz-scraper

./: .env  .gitignore  Makefile  README.md  pyproject.toml
config/: screeners.yaml
scraper/: main.py
scraper/exceptions/: __init__.py
scraper/models/: enums.py  screener.py
scraper/notebooks/: visualization.ipynb
scraper/screener/: etl.py  scraper.py  screeners.py
scraper/utils/: __init__.py  config.py
tests/: test_filters.py  test_screener_filters.py
