[tool.poetry]
name = "finviz-scraper"
version = "1.0.0"
description = "A finviz web scraper"
authors = ["Roy Shemtov"]
license = "MIT"
readme = "README.md"
packages = [{ include = "scraper" }]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.3"
loguru = "^0.7.2"
mechanicalsoup = "^1.3.0"
from-root = "^1.3.0"
omegaconf = "^2.3.0"
pydantic = "^2.5.1"
user-agent = "^0.1.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ipykernel = "^6.26.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
